--- a/app/src/main/res/layout/activity_busi_monitor_info.xml
+++ b/app/src/main/res/layout/activity_busi_monitor_info.xml
@@ -34,7 +34,7 @@
             android:id="@+id/tv_busi_monitor_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/px_30"
+            android:layout_marginRight="@dimen/px_48"
             android:gravity="end"
             android:text="张大明"
             android:textColor="@color/dark_gray"
@@ -63,7 +63,7 @@
             android:id="@+id/tv_busi_monitor_sex"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/px_30"
+            android:layout_marginRight="@dimen/px_48"
             android:gravity="end"
             android:text="男"
             android:textColor="@color/dark_gray"
@@ -74,10 +74,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/px_88"
+        android:layout_marginTop="1dp"
         android:background="@color/white"
         android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:layout_marginTop="1dp">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView2"
@@ -93,13 +93,14 @@
             android:id="@+id/tv_busi_monitor_tel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/px_30"
+            android:layout_marginRight="@dimen/px_48"
             android:gravity="end"
             android:text="136-0909-0110"
             android:textColor="@color/dark_gray"
             android:textSize="@dimen/px_30" />
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/px_88"
@@ -121,7 +122,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="end"
-            android:layout_marginRight="@dimen/px_30"
+            android:layout_marginRight="@dimen/px_48"
             android:textColor="@color/dark_gray"
             android:textSize="@dimen/px_30"
             android:text="Massive-Dynamic Co.Ltd 聚能集团"/>
