--- a/app/src/main/res/layout/fragment_usercenter_admp.xml
+++ b/app/src/main/res/layout/fragment_usercenter_admp.xml
@@ -17,35 +17,39 @@
             android:layout_width="match_parent"
             android:layout_height="84.48dp"
             android:layout_marginTop="@dimen/px_32"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
             android:background="@color/white"
+            android:clickable="true"
+            android:gravity="center_vertical"
             android:onClick="onLayoutClick"
-            android:clickable="true">
+            android:orientation="horizontal">
+
             <ImageView
                 android:layout_width="@dimen/px_120"
                 android:layout_height="@dimen/px_120"
                 android:layout_marginLeft="@dimen/px_24"
-                android:src="@mipmap/ic_common_head"/>
+                android:src="@mipmap/ic_common_head" />
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/px_120"
-                android:orientation="vertical"
+                android:layout_marginLeft="@dimen/px_24"
                 android:gravity="center_vertical"
-                android:layout_marginLeft="@dimen/px_24">
+                android:orientation="vertical">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/userinfo_username"
-                    android:textSize="@dimen/normal_textsize"
-                    android:textColor="@color/black"/>
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/normal_textsize" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:text="@string/userinfo_company"
-                    android:textSize="@dimen/normal_textsize"
-                    android:textColor="@color/dark_gray"/>
+                    android:textColor="@color/dark_gray"
+                    android:textSize="@dimen/normal_textsize" />
             </LinearLayout>
         </LinearLayout>
 
