修正了部分先前缺乏的图片资源

--- a/app/src/main/res/layout/activity_ucent_setting_about.xml
+++ b/app/src/main/res/layout/activity_ucent_setting_about.xml
@@ -16,7 +16,7 @@
             android:layout_height="@dimen/px_120"
             android:layout_marginTop="@dimen/px_80"
             android:layout_gravity="center_horizontal"
-            android:src="@mipmap/ic_common_head"/>
+            android:src="@mipmap/icon_logo"/>
 
         <TextView
             android:layout_width="wrap_content"
