--- a/app/src/main/res/layout/activity_ucent_admp_card.xml
+++ b/app/src/main/res/layout/activity_ucent_admp_card.xml
@@ -46,7 +46,7 @@
             android:text="@string/userinfo_username"/>
 
         <TextView
-            android:id="@+id/tc_ucent_admp_name"
+            android:id="@+id/tv_ucent_admp_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/px_48"
@@ -75,7 +75,7 @@
             android:textSize="@dimen/px_32" />
 
         <TextView
-            android:id="@+id/tc_ucent_admp_phone"
+            android:id="@+id/tv_ucent_admp_phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/px_48"
@@ -104,7 +104,7 @@
             android:textSize="@dimen/px_32" />
 
         <TextView
-            android:id="@+id/tc_ucent_admp_company"
+            android:id="@+id/tv_ucent_admp_company"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/px_48"
@@ -133,7 +133,7 @@
             android:textSize="@dimen/px_32" />
 
         <TextView
-            android:id="@+id/tc_ucent_admp_room"
+            android:id="@+id/tv_ucent_admp_room"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/px_48"
@@ -162,7 +162,7 @@
             android:textSize="@dimen/px_32" />
 
         <TextView
-            android:id="@+id/tc_ucent_admp_balance"
+            android:id="@+id/tv_ucent_admp_balance"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/px_24"
@@ -190,7 +190,7 @@
             android:textSize="@dimen/px_32" />
 
         <TextView
-            android:id="@+id/tc_ucent_admp_recharge"
+            android:id="@+id/tv_ucent_admp_recharge"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/px_24"
