整合了repair页面，将审核的不同整合到了一个页面，完成了recylerview的相关内容

--- a/app/src/main/res/layout/activity_busi_admp_repair_info.xml
+++ b/app/src/main/res/layout/activity_busi_admp_repair_info.xml
@@ -16,6 +16,8 @@
         android:orientation="horizontal">
 
         <EditText
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             android:id="@+id/et_busi_joinc_parks"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
