--- a/app/src/main/res/layout/activity_busi_admp_repair_detail.xml
+++ b/app/src/main/res/layout/activity_busi_admp_repair_detail.xml
@@ -298,6 +298,8 @@
         </LinearLayout>
 
         <RelativeLayout
+            android:id="@+id/rlayout_busi_admp_repair_edit"
+            android:visibility="visible"
             android:layout_width="match_parent"
             android:layout_height="@dimen/px_40"
             android:layout_marginTop="@dimen/px_24"
@@ -354,28 +356,264 @@
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/btn_busi_admp_repair_accpet"
-            android:layout_width="@dimen/px_702"
-            android:layout_height="@dimen/px_88"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/px_32"
-            android:background="@drawable/green_bg"
-            android:text="@string/business_accpet_btn"
-            android:textColor="@color/white" />
-
-        <Button
-            android:id="@+id/btn_busi_admp_repair_refuse"
-            android:layout_width="@dimen/px_702"
-            android:layout_height="@dimen/px_88"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/px_24"
-            android:background="@drawable/light_red_bg"
-            android:text="@string/business_refuse_btn"
-            android:textColor="@color/white" />
-        <View
+        <LinearLayout
+            android:id="@+id/llayout_item_busi_admp_repir_accpet"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/px_24"/>
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="gone">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/px_64"
+                android:background="@color/background"
+                android:gravity="center_vertical"
+                android:paddingLeft="@dimen/px_48"
+                android:text="@string/business_approval_status"
+                android:textSize="@dimen/px_24"
+                android:textColor="@color/dark_gray"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/px_88"
+                android:layout_marginTop="1dp"
+                android:background="@color/white"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="@dimen/px_48"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/px_32"
+                    android:text="@string/business_approval_business"/>
+
+                <TextView
+                    android:id="@+id/tv_busi_admp_repair_busiaccpet"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/px_48"
+                    android:gravity="end"
+                    android:text="设备报修"
+                    android:textColor="@color/light_black"
+                    android:textSize="@dimen/px_30" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/px_88"
+                android:layout_marginTop="1dp"
+                android:background="@color/white"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="@dimen/px_48"
+                    android:text="@string/business_approval_status"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/px_32" />
+
+                <TextView
+                    android:id="@+id/tv_busi_admp_repair_statusaccpet"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/px_48"
+                    android:gravity="end"
+                    android:text="已受理"
+                    android:textColor="@color/blue"
+                    android:textSize="@dimen/px_30" />
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/llayout_item_busi_admp_repir_refuse"
+            android:visibility="gone">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/px_88"
+                android:layout_marginTop="32dp"
+                android:background="@color/white"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="@dimen/px_48"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/px_32"
+                    android:text="@string/business_approval_business"/>
+
+                <TextView
+                    android:id="@+id/tv_busi_admp_repair_busirefuse"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/px_48"
+                    android:gravity="end"
+                    android:text="设备报修"
+                    android:textColor="@color/light_black"
+                    android:textSize="@dimen/px_30" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/px_88"
+                android:layout_marginTop="1dp"
+                android:background="@color/white"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="@dimen/px_48"
+                    android:text="@string/business_approval_status"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/px_32" />
+
+                <TextView
+                    android:id="@+id/tv_busi_admp_repair_statusrefuse"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/px_48"
+                    android:gravity="end"
+                    android:text="不受理"
+                    android:textColor="@color/light_red"
+                    android:textSize="@dimen/px_30" />
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/px_64"
+                android:background="@color/background"
+                android:gravity="center_vertical"
+                android:paddingLeft="@dimen/px_48"
+                android:text="@string/business_refuse_reasons"
+                android:textSize="@dimen/px_24"
+                android:textColor="@color/dark_gray"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/px_88"
+                android:background="@color/white"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="@dimen/px_48"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/px_32"
+                    android:text="原因1："/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="XXXXX"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/px_30" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/px_88"
+                android:layout_marginTop="1dp"
+                android:background="@color/white"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="@dimen/px_48"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/px_32"
+                    android:text="原因2："/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="XXXXX"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/px_30" />
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/px_64"
+                android:background="@color/background"
+                android:gravity="center_vertical"
+                android:paddingLeft="@dimen/px_48"
+                android:text="@string/business_other_reasons"
+                android:textSize="@dimen/px_24"
+                android:textColor="@color/dark_gray"/>
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/px_48"
+                android:background="@color/white"/>
+
+            <TextView
+                android:id="@+id/tv_busi_admp_repair_reason"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:paddingLeft="@dimen/px_48"
+                android:paddingRight="@dimen/px_48"
+                android:gravity="center_vertical"
+                android:textSize="@dimen/px_28"
+                android:textColor="@color/black"
+                android:text="信息不全"/>
+
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/px_48"
+                android:background="@color/white"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/llayout_item_busi_admp_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <Button
+                android:id="@+id/btn_busi_admp_repair_accpet"
+                android:layout_width="@dimen/px_702"
+                android:layout_height="@dimen/px_88"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/px_32"
+                android:background="@drawable/green_bg"
+                android:text="@string/business_accpet_btn"
+                android:textColor="@color/white" />
+
+            <Button
+                android:id="@+id/btn_busi_admp_repair_refuse"
+                android:layout_width="@dimen/px_702"
+                android:layout_height="@dimen/px_88"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/px_24"
+                android:background="@drawable/light_red_bg"
+                android:text="@string/business_refuse_btn"
+                android:textColor="@color/white" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/px_24"/>
+        </LinearLayout>
     </LinearLayout>
 
 </ScrollView>
